--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
         config {
             keyAlias 'udacity'
             keyPassword 'password'
-            storeFile file("app/keystore.jks")
+            storeFile file("keystore.jks")
             storePassword 'password'
         }
     }
